# fluidd-cropper

./: CMakeLists.txt  Main.qml  README.md  cropper.h  main.cpp
